# sze_a7r_akadalyelkerulo

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: akadalyelkerulo.launch.py
sze_a7r_akadalyelkerulo/: akadalyelkerulo.py  controller_node.py  sensor_node.py  sim_sensor_for_turtle.py
