<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sze_a7r_akadalyelkerulo</name>
  <version>0.0.1</version>
  <description>Egyszerű akadályelkerülő robot ROS2-höz</description>
  <maintainer email="szepgergo13@gmail.com">Szép Gergő Krisztián</maintainer>
  <license>GNU General Public License v3.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
